@@ -59,9 +59,11 @@ env:
     - ENABLE_MODULES=""
     - DISABLE_MODULES="webauth"
     - ONLY_TEST=""
+    - BEHAT_TAG=""
     - DEPLOYER_BRANCH=""
     - DRUPAL_PROFILE_BRANCH=""
-    - CLICKY_BRANCH=""
+    - SCRIPTS_BRANCH="test-chrome-update"
+    - CLICKY_BRANCH="stanford-page-features-overridden"
     - SCRIPTS_BRANCH=""
 
 language: php
@@ -69,6 +71,7 @@ php:
   - '5.6'
 
 sudo: required
+dist: precise
 
 cache:
   directories:
@@ -83,8 +86,8 @@ mysql:
 
 before_install:
   # download external repository with Stanford Travis CI scripts
-  - if [ ! -z $SCRIPTS_BRANCH ]; then SCRIPTS_BRANCH="-b $SCRIPTS_BRANCH"; fi
-  - git clone $SCRIPTS_BRANCH https://github.com/SU-SWS/stanford_travisci_scripts.git $HOME/stanford_travisci_scripts
+  # - if [ ! -z "$SCRIPTS_BRANCH" ]; then SCRIPTS_BRANCH="-b $SCRIPTS_BRANCH"; fi
+  - git clone -b test-chrome-update https://github.com/SU-SWS/stanford_travisci_scripts.git $HOME/stanford_travisci_scripts
   - chmod +x $HOME/stanford_travisci_scripts/bin/*.sh
   # install composer packages
   - $HOME/stanford_travisci_scripts/bin/before_install.sh
