@@ -14,7 +14,7 @@ projects[simplesamlphp_auth][subdir] = "contrib"
 projects[simplesamlphp_auth][version] = "2.0-alpha2"
 projects[simplesamlphp_auth][patch][] = "https://www.drupal.org/files/simplesamlphp_auth-fixnewdrupalusers-1824194-6.patch"
 projects[smtp][subdir] = "contrib"
-projects[smtp][version] = "1.2"
+projects[smtp][version] = "1.7"
 
 ; Custom modules, github
 projects[anchorage_helper][subdir] = "stanford"
